[tool.poetry]
name = "zkparser"
version = "0.1.0"
description = ""
authors = ["Akulij <aakulij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
